--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ company_name: Adam Sturge
 github_editme_path: 
 # if you're using Github, provide the basepath to the branch you've created for reviews, following the sample here. if not, leave this value blank.
 
-disqus_shortname: 
+disqus_shortname: adam-sturge-engine-blog
 # if you're using disqus for comments, add the shortname here. if not, leave this value blank.
 
 google_analytics: 
