--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,9 @@ site_title: Engine
 company_name: Adam Sturge
 # this appears in the footer
 
+company_url : https://adamsturge.github.io/portfolio/
+# this url is linked to by the image by the company logo
+
 github_editme_path: 
 # if you're using Github, provide the basepath to the branch you've created for reviews, following the sample here. if not, leave this value blank.
 
