upated main toc

--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -23,7 +23,7 @@ entries:
     output: web
     folderitems:
 
-    - title: Get started
+    - title: Hello
       url: /index.html
       output: web
       type: homepage
