wrote first draft of model and hello sphere

--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -36,6 +36,10 @@ entries:
       url : /mydoc_mesh.html
       output: web
 
+    - title : Model
+      url : /mydoc_model.html
+      output: web
+
     - title : Hello Sphere
       url : /mydoc_hello_sphere.html
       output: web
