cleaned up some things. Added camera and shader pages

--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -32,6 +32,14 @@ entries:
       url: /mydoc_setup.html
       output: web
 
+    - title: Simple Shader
+      url : /mydoc_simple_shader.html
+      output: web
+
+    - title: Camera
+      url : /mydoc_camera.html
+      output: web
+
     - title : Mesh
       url : /mydoc_mesh.html
       output: web
