--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -74,3 +74,7 @@ entries:
     - title : Verlet
       url : /mydoc_verlet.html
       output: web
+
+    - title : Backward Euler (theory)
+      url : /mydoc_backward_euler_theory.html
+      output : web
