added Hookes law page

--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -106,5 +106,9 @@ entries:
     - title : Linear Drag
       url : /mydoc_linear_drag_force.html
       output : web
+    
+    - title : Hooke's law
+      url : /mydoc_hookes_law.html
+      output : web
 
 
