added material page

--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -119,4 +119,6 @@ entries:
       url : /mydoc_light_source.html
       output : web
 
-
+    - title : Material
+      url : /mydoc_material.html
+      output : web
