--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -107,7 +107,7 @@ entries:
       url : /mydoc_linear_drag_force.html
       output : web
     
-    - title : Hooke's law
+    - title : Hooke's Law
       url : /mydoc_hookes_law.html
       output : web
 
@@ -121,4 +121,8 @@ entries:
 
     - title : Material
       url : /mydoc_material.html
+      output : web
+
+    - title : Mesh Normals
+      url   : /mydoc_mesh_normals.html
       output : web
