added page on rotational dynamics

--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -139,4 +139,6 @@ entries:
       url : /mydoc_rotations.html
       output : web
 
- 
+    - title : Rotational Dynamics
+      url : /mydoc_rotational_dynamics.html
+      output : web 
