Wrote article on inertia tensor theory

--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -146,3 +146,7 @@ entries:
     - title : Rotational Explicit Euler
       url : /mydoc_rotational_explicit_euler.html
       output : web
+
+    - title : Inertia Tensor Theory
+      url   : /mydoc_inertia_tensor_theory.html
+      output : web
